--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cras-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/cras-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- 🔒 SEGURANÇA: Content Security Policy (sem frame-ancestors - só funciona via HTTP header) -->
-    <meta http-equiv="Content-Security-Policy" 
-          content="default-src 'self'; 
-                   script-src 'self' 'unsafe-inline' 'unsafe-eval';
-                   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-                   font-src 'self' https://fonts.gstatic.com;
-                   img-src 'self' data: https: blob:;
-                   connect-src 'self' http://localhost:5000 http://127.0.0.1:5000 ws://localhost:5173 ws://127.0.0.1:5173;
-                   base-uri 'self';
-                   form-action 'self';
-                   upgrade-insecure-requests;">
+    <!-- 🔒 SEGURANÇA: Content Security Policy gerenciado pelo backend via Helmet -->
+    <!-- CSP removido do HTML para evitar conflitos - configurado em backend/server.js -->
     
     <!-- 🔒 SEGURANÇA: Prevenir MIME type sniffing -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
